# qwen2-ascend-llm

./: README.md  main.py  pyproject.toml  run_container.sh
demo/nas_ea/ea_cls_imagenet_pytorch/: readme.md  run_release.sh  scen.yaml  user_module.py
demo/nas_ea/ea_seg_voc_pytorch/: pre_train.yaml  readme.md  run_release.sh  scen.yaml  user_module.py
demo/quant8-8/notrain/: bin_data_preprocessing.py
demo/quant8-8/notrain/pytorch_mnist/: config.prototxt  mnist.pth  mnist.py  run_release.sh
dopt/: nasea_requirements_pytorch.sh
dopt/common_utils/: __init__.py
dopt/dopt_torch/: __init__.py
dopt/notrain_pytorch/: __init__.py
dopt/resource/: __init__.py
dopt/resource/resource_custom/: __init__.py
dopt/strategy/strategy_custom/: __init__.py
dopt/strategy/task/task_common/: __init__.py
dopt/strategy/task/task_custom/: __init__.py
dopt/strategy/task/task_custom/nas_ea/: __init__.py  nas_ea_entry.py  requirements_pytorch.txt
dopt/strategy/task/task_custom/nas_ea/backend/torch/: __init__.py
dopt/strategy/task/task_custom/nas_ea/backend/torch/predictor/utils/: __init__.py
dopt/strategy/task/task_custom/nas_ea/comm/: __init__.py
dopt/strategy/task/task_custom/nas_ea/config/: __init__.py  cls_default_pytorch.yaml  seg_default_pytorch.yaml
dopt/strategy/task/task_custom/nas_ea/pretrain/: __init__.py
export/: change_node.py  export_onnx.py  modeling_qwen2.py
quant/: config.yaml  demo.py
